# ezc

./: .gitignore  LICENSE  README.md  manage.py  pdf_factory.py  pyproject.toml  requirements.txt  setup.cfg  test_config.ini  test_pdf_factory.py  tox.ini
.github/workflows/: ci.yml  continouous_integration.yml  python-package.yml
ezc/: cli.py  constants.py  excel_factory.py  exceptions.py  globals.py  json_utility.py  logger.py  mail_utility.py  main.py  pdf_factory.py  recipes.py  shopping.py  utility.py
ezcourses/: settings.py  urls.py  wsgi.py
functional_tests/: base.py  test_home_page_access.py  test_shopping_list_generation.py  test_simple_ingredient_access.py  test_simple_recipe_access.py  tests.py
list_generation/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
list_generation/migrations/: 0001_initial.py  0002_ingredient_price.py  0003_recipe.py  0004_recipeingredient.py  0005_recipe_ingredients.py  0006_shoppinglist.py  0007_shoppinglist_recipes.py  0008_generatedshoppinglist.py  0009_auto_20230208_1617.py  0010_auto_20230208_1629.py  0011_alter_shoppinglistgeneration_shopping_list.py  0012_alter_shoppinglistgeneration_shopping_list.py  0013_shoppingingredient.py  0014_shoppinglistgeneration_shopping_ingredients.py  0015_auto_20230209_0918.py  0016_shoppinglistgeneration_pdf_file.py
list_generation/templates/: home.html  ingredient_details.html  (+4 more)
src/: cli.py  constants.py  excel_factory.py  globals.py  json_utility.py  utility.py
tests/: data_test_private_json.py  data_test_public_json.py  test_private_json.py  test_public_json.py
(+45 files in other folders)
